電話番号追加

--- a/about.html
+++ b/about.html
@@ -106,7 +106,7 @@
                 茨城県つくば市稲荷原1-38
                 <br>
                 電話番号:
-                <a href="tel:029-869-9273" class="about-tel">029-869-9273</a>
+                <a href="tel:029-869-9273" class="about-tel"  onClick="ga('send', 'event', 'cv', 'tel', location.href, 1000, {'nonInteraction':1});">029-869-9273</a>
                 <br>
                 <br>
                 休診日: 水曜日、祝日
@@ -119,6 +119,10 @@
             <div class="col-sm-12">
               <h3 class="sidebar-title">診療時間</h3>
               <img class="sidebar-schedule" src="images/schedule.png" alt="診察予定">
+            </div>
+            <div class="col-sm-12">
+              <h3 class="sidebar-title">体の痛みや治療などお気軽にご相談ください</h3>
+              <p><a href="tel:0298699273" class="sidebar-tel emphasis" onClick="ga('send', 'event', 'cv', 'tel', location.href, 1000, {'nonInteraction':1});"><span class="glyphicon glyphicon-earphone" aria-hidden="true"></span> 029-869-9273</a></p>
             </div>
           </div>
         </div>
