--- a/insole.html
+++ b/insole.html
@@ -96,6 +96,10 @@
               <h3 class="sidebar-title">診療時間</h3>
               <img class="sidebar-schedule" src="images/schedule.png" alt="診察予定">
             </div>
+            <div class="col-sm-12">
+              <h3 class="sidebar-title">体の痛みや治療などお気軽にご相談ください</h3>
+              <p><a href="tel:0298699273" class="sidebar-tel emphasis" onClick="ga('send', 'event', 'cv', 'tel', location.href, 1000, {'nonInteraction':1});"><span class="glyphicon glyphicon-earphone" aria-hidden="true"></span> 029-869-9273</a></p>
+            </div>
           </div>
         </div>
       </div>
