スタッフページに院長画像追加

--- a/staff.html
+++ b/staff.html
@@ -65,7 +65,10 @@
                 スタッフ紹介
               </h2>
               <div class="description">
-                <p>
+                <p class="col-sm-6">
+                  <img class="" style="width: 100%;" src="images/doctor.jpg">
+                </p>
+                <p class="col-sm-6">
                   初めまして、つくば接骨院院長 植田香太郎です。
                   <br>
                   つくば接骨院では予防・治療・リハビリ・トレーニングを通し、ただ治療をするだけでなくトータルケアを目指しています。
@@ -81,6 +84,7 @@
                 <p>
                   治療、回復後のアフターケア・日頃から出来る予防法・パフォーマンス向上のお手伝いなど、患者様一人一人と向き合い最適な治療プログラムを組んでいきます。これまでお体の痛み・不安・疑問をそのままにしていた方、是非一度ご来院ください。
                 </p>
+                <img class="" style="width: 100%;" src="images/funs.jpg">
               </div>
             </div>
           </div>
