--- a/traffic-accident.html
+++ b/traffic-accident.html
@@ -6,7 +6,7 @@
     <meta name="description" content="つくば接骨院では、交通事故治療に関して、専門医と連携しながら患者様に最適な治療をいたします。">
     <meta name="author" content="Kyotaro Ueda">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>交通事故 | つくば接骨院</title>
+    <title>交通事故治療 | つくば接骨院</title>
     <link rel="shortcut icon" href="images/favicon.ico">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/bootstrap.min.css">
@@ -16,6 +16,10 @@
     <script src="//cdn.jsdelivr.net/html5shiv/3.7.2/html5shiv.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
+    <meta property="og:title" content="つくば接骨院 | 交通事故治療" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="http://tsukuba-sekkotsuin.com/traffic-accident.html" />
+    <meta property="og:image" content="http://tsukuba-sekkotsuin.com/images/doctor_og.jpg" />
   <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
     (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
