--- a/about.html
+++ b/about.html
@@ -16,6 +16,10 @@
     <script src="//cdn.jsdelivr.net/html5shiv/3.7.2/html5shiv.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
+    <meta property="og:title" content="つくば接骨院 | 院紹介" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="http://tsukuba-sekkotsuin.com/about.html" />
+    <meta property="og:image" content="http://tsukuba-sekkotsuin.com/images/doctor_og.jpg" />
   <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
     (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
