feat: リハビリ・トレーニングページ追加

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
             <div class="col-sm-6">
               <h2 class="main-title">
                 <img class="header-icon" src="images/icon.png">
-                リハビリ
+                リハビリ・トレーニングマシン
               </h2>
               <div class="coming-soon alert alert-info">
                 準備中です。
