--- a/index.html
+++ b/index.html
@@ -110,31 +110,43 @@
                 詳細はこちら >
               </a>
             </div>
-            <div class="col-sm-6">
+            <div class="col-sm-12">
               <h2 class="main-title">
                 <img class="header-icon" src="images/icon.png">
                 リハビリ・トレーニングマシン
               </h2>
-              <div class="coming-soon alert alert-info">
-                準備中です。
+              <div class="description">
+                つくば接骨院では、治療内容に合わせてリハビリやトレーニングをすることが可能です。
+                <br>
+                身体の状態に合わせたメニューも合わせてご提案します。
               </div>
+              <a href="rehabilitation-and-training.html" class="content-link pull-right">
+                詳細はこちら >
+              </a>
             </div>
-            <div class="col-sm-6">
+            <div class="col-sm-12">
               <h2 class="main-title">
                 <img class="header-icon" src="images/icon.png">
                 保険外診療
               </h2>
-              <div class="coming-soon alert alert-info">
-                準備中です。
+              <div class="description">
+                <h3 class="home-content-title"><span>全身マッサージ　　60分 4,000円</span></h3>
+                <div class="home-content-description">ご希望に沿って全身もみほぐし！</div>
+                <h3 class="home-content-title"><span>パートナーストレッチ　　60分 4,000円</span></h3>
+                <div class="home-content-description">柔軟性向上、疲労回復、ストレス解消などの効果！</div>
+                <div class="home-content-description">土日の午後、電話予約にて承ります。</div>
               </div>
             </div>
-            <div class="col-sm-6">
+            <div class="col-sm-12">
               <h2 class="main-title">
                 <img class="header-icon" src="images/icon.png">
                 往診
               </h2>
-              <div class="coming-soon alert alert-info">
-                準備中です。
+              <div class="description">
+                転倒、急性腰痛などのご理由により、ご来院できない患者さまのために、当院では往診を行っております。
+                <br>
+                詳細などはお電話にてお問い合わせください。
+                <p class="home-tel"><a href="tel:0298699273" class="sidebar-tel emphasis" onClick="ga('send', 'event', 'cv', 'tel', location.href, 1000, {'nonInteraction':1});"><span class="glyphicon glyphicon-earphone" aria-hidden="true"></span> 029-869-9273</a></p>
               </div>
             </div>
           </div>
