feat: トップページの修正

--- a/index.html
+++ b/index.html
@@ -149,6 +149,77 @@
                 <p class="home-tel"><a href="tel:0298699273" class="sidebar-tel emphasis" onClick="ga('send', 'event', 'cv', 'tel', location.href, 1000, {'nonInteraction':1});"><span class="glyphicon glyphicon-earphone" aria-hidden="true"></span> 029-869-9273</a></p>
               </div>
             </div>
+            <div class="col-sm-12">
+              <h2 class="main-title">
+                <img class="header-icon" src="images/icon.png">
+                料金表
+              </h2>
+              <div class="table-responsive">
+                <table class="table price-list">
+                  <tbody>
+                    <tr>
+                      <th>治療</th>
+                      <td>1割負担</td>
+                      <td>160〜360円</td>
+                    </tr>
+                    <tr>
+                      <th></th>
+                      <td>2割負担</td>
+                      <td>300〜600円</td>
+                    </tr>
+                    <tr>
+                      <th></th>
+                      <td>3割負担</td>
+                      <td>460〜820円</td>
+                    </tr>
+                    <tr>
+                      <th>トレーニング</th>
+                      <td>1回 30分</td>
+                      <td>300円</td>
+                    </tr>
+                    <tr>
+                      <th>NMES　<sub>注1</sub></th>
+                      <td>1回 20分</td>
+                      <td>300円</td>
+                    </tr>
+                    <tr>
+                      <th>トレーニング + NMES</th>
+                      <td>1回</td>
+                      <td>500円</td>
+                    </tr>
+                    <tr>
+                      <th>INBODY　<sub>注2</sub></th>
+                      <td>1回</td>
+                      <td>500円</td>
+                    </tr>
+                    <tr>
+                      <th>3Dウォーターマッサージベッド　<sub>注3</sub></th>
+                      <td>12分</td>
+                      <td>300円</td>
+                    </tr>
+                    <tr>
+                      <th></th>
+                      <td>24分</td>
+                      <td>500円</td>
+                    </tr>
+                  </tbody>
+                </table>
+              </div>
+              <div class="notification-description">
+                <span class="notification">注1</span>
+                筋を電気で刺激して筋強化を行う手法です。精神的な負担や心肺機能への負担がなく、骨や腱へのストレスも低いため、安全に長時間高負荷のトレーニングができます。
+              </div>
+              <div class="notification-description">
+                <span class="notification">注2</span>
+                InBody測定は、体を構成する基本成分である体水分、タンパク質、ミネラル、体脂肪を定量的に分析し、栄養状態に問題がないか、体がむくんでいないか、身体はバランスよく発達しているかなど、人体成分の過不足を評価する検査です。
+              </div>
+              <div class="notification-description">
+                <span class="notification">注3</span>
+                最新機器です。
+                一度経験のある方も、ない人も、ぜひ一度体験してみてください。
+                日々の疲れ、きっと癒してくれます！
+              </div>
+            </div>
           </div>
         </div>
         <div class="col-sm-4">
