feat: 画像追加とテキスト修正

--- a/about.html
+++ b/about.html
@@ -80,10 +80,16 @@
                   <img class="img-responsive" src="images/training.jpg" alt="トレーニング機器">
                 </div>
                 <div class="col-sm-6">
-                  <img class="img-responsive" src="images/water.jpg" alt="ウォーターマッサージ">
+                  <img class="img-responsive" src="images/water-bed.jpg" alt="ウォーターマッサージ">
                 </div>
-                <h3 class="sub-title">駐車場</h3>
+                <div class="col-sm-6">
+                  <img class="img-responsive" src="images/wc.jpg" alt="お手洗い">
+                </div>
+                <div class="col-sm-6">
+                  <img class="img-responsive" src="images/prumeria.jpg" alt="プルメリア">
+                </div>
                 <div class="col-sm-12">
+                  <h3 class="sub-title">駐車場</h3>
                   <img class="img-responsive" src="images/parking.png" alt="駐車場">
                 </div>
               </div>
