--- a/index.html
+++ b/index.html
@@ -104,15 +104,13 @@
                 リハビリ・トレーニングマシン
               </h2>
               <div class="description">
-                つくば接骨院では、治療内容に合わせてリハビリやトレーニングをすることが可能です。
-                <br>
-                身体の状態に合わせたメニューも合わせてご提案します。
+                当院では、痛みの要因によっては治療とトレーニングを併用し、患部の回復や向上を図っております。
               </div>
               <a href="rehabilitation-and-training.html" class="content-link pull-right">
                 詳細はこちら >
               </a>
             </div>
-            <div class="col-sm-12">
+            <div class="col-sm-6">
               <h2 class="main-title">
                 <img class="header-icon" src="images/icon.png">
                 往診
@@ -124,7 +122,7 @@
                 <p class="home-tel"><a href="tel:0298699273" class="sidebar-tel emphasis" onClick="ga('send', 'event', 'cv', 'tel', location.href, 1000, {'nonInteraction':1});"><span class="glyphicon glyphicon-earphone" aria-hidden="true"></span> 029-869-9273</a></p>
               </div>
             </div>
-            <div class="col-sm-12">
+            <div class="col-sm-6">
               <h2 class="main-title">
                 <img class="header-icon" src="images/icon.png">
                 インソール
@@ -194,17 +192,21 @@
               </div>
               <div class="notification-description">
                 <span class="notification">注1</span>
-                筋を電気で刺激して筋強化を行う手法です。精神的な負担や心肺機能への負担がなく、骨や腱へのストレスも低いため、安全に長時間高負荷のトレーニングができます。
+                運動が苦手な方でも身体を動かさず、電気刺激によって負荷の高いトレーニングを行い、筋力アップすることができます。
+                <br>
+                筋力がアップすることで怪我の再発防止につながります。
               </div>
               <div class="notification-description">
                 <span class="notification">注2</span>
                 InBody測定は、体を構成する基本成分である体水分、タンパク質、ミネラル、体脂肪を定量的に分析し、栄養状態に問題がないか、体がむくんでいないか、身体はバランスよく発達しているかなど、人体成分の過不足を評価する検査です。
+                <br>
+                その中で当院では主に筋肉バランス、身体バランスおよび身体強度に重点をおいてサポートさせていただいております。現状を数値化することで、体の弱い部分あるいは強い部分が明白となり具体的な目標を立てることができます。
               </div>
               <div class="notification-description">
                 <span class="notification">注3</span>
-                最新機器です。
-                一度経験のある方も、ない人も、ぜひ一度体験してみてください。
-                日々の疲れ、きっと癒してくれます！
+                仰向けに寝て頂くと首や肩から足先まで全身を計6本のノズルの組合せにより刺激範囲を変化させながら 「もみ」「たたき」「ほぐし」「さすり」「のばし」「おし」の6種類の手技に見立てた水圧刺激をより効果的にそして心地よく体感して頂けるウォーターベッドです。
+                <br>
+                当院では、リラックスし全身の筋肉をほぐし、血行を良くするために使用します
               </div>
             </div>
             <div class="col-sm-12">
