--- a/rehabilitation-and-training.html
+++ b/rehabilitation-and-training.html
@@ -68,6 +68,22 @@
                         <img class="header-icon" src="images/icon.png">
                         リハビリ・トレーニングマシン
                     </h2>
+                    <div class="quotation">
+                      骨や筋肉の量のピークは20～30代だということをご存知でしたか？
+                      <br>
+                      骨や筋肉は適度な運動で刺激を与え、適切な栄養を摂ることで、強く丈夫に維持されます。弱った骨や筋肉では、40代・50代で身体の衰えを感じやすくなり、60代以降、思うように動けない身体になってしまう可能性があります。
+                      <br>
+                      筋肉、骨と同様に軟骨や椎間板にも運動や生活活動によって適正な負荷がかかることが必要です。ただし、過度なスポーツや過体重によって「負担をかけられすぎる」と、軟骨や椎間板は逆に傷んでしまうことになります。
+                      <br>
+                      また、やせすぎると筋肉や骨は弱くなってしまいます。肥満もやせすぎもよくありません。心あたりはありませんか？
+                      <br>
+                      (引用: 日本整形外科学会公認 ロコモティブシンドローム予防啓発公式サイトより)
+                    </div>
+                    <div class="page-description">
+                      このように近年では、健康維持に筋力がいかに重要か問われる時代となってきました。現在痛みのある方も、無い方も、日常的に運動する習慣を作ってみませんか？
+                      <br>
+                      年齢を問わず、全て皆様にとって少しでも健康増進のお役に立てればと考えております。
+                    </div>
                     <div class="description">
                         <div class="row">
                             <h3 class="item-title">レッグプレス</h3>
