feat: トップやリハビリなどの調整

--- a/about.html
+++ b/about.html
@@ -74,7 +74,7 @@
                   <img class="img-responsive" src="images/entrance.jpg" alt="つくば接骨院の入り口">
                 </div>
                 <div class="col-sm-6">
-                  <img class="img-responsive" src="images/medical.jpg" alt="">
+                  <img class="img-responsive" src="images/beds.jpg" alt="">
                 </div>
                 <div class="col-sm-6">
                   <img class="img-responsive" src="images/training.jpg" alt="トレーニング機器">
@@ -83,10 +83,17 @@
                   <img class="img-responsive" src="images/water-bed.jpg" alt="ウォーターマッサージ">
                 </div>
                 <div class="col-sm-6">
+                  超音波治療器
+                  <img class="" style="width: 100%;" src="images/chouonpa.jpg" alt="超音波治療器">
+                </div>
+                <div class="col-sm-6">
                   <img class="img-responsive" src="images/wc.jpg" alt="お手洗い">
                 </div>
                 <div class="col-sm-6">
                   <img class="img-responsive" src="images/prumeria.jpg" alt="プルメリア">
+                </div>
+                <div class="col-sm-6">
+                  <img class="img-responsive" src="images/purumeria_2.jpg" alt="プルメリア">
                 </div>
                 <div class="col-sm-12">
                   <h3 class="sub-title">駐車場</h3>
