--- a/index.html
+++ b/index.html
@@ -163,6 +163,11 @@
                       <td>300円</td>
                     </tr>
                     <tr>
+                      <th>　治療の併用時</th>
+                      <td>1回 15分</td>
+                      <td>100円</td>
+                    </tr>
+                    <tr>
                       <th>NMES　<sub>注1</sub></th>
                       <td>1回 20分</td>
                       <td>300円</td>
@@ -187,27 +192,47 @@
                       <td>24分</td>
                       <td>500円</td>
                     </tr>
+                    <tr>
+                      <th>インソール</th>
+                      <td></td>
+                      <td>6,000円</td>
+                    </tr>
                   </tbody>
                 </table>
               </div>
+            </div>
+            <div class="col-sm-6">
               <div class="notification-description">
                 <span class="notification">注1</span>
                 運動が苦手な方でも身体を動かさず、電気刺激によって負荷の高いトレーニングを行い、筋力アップすることができます。
                 <br>
                 筋力がアップすることで怪我の再発防止につながります。
               </div>
+            </div>
+            <div class="col-sm-6">
+              <img class="" style="width: 100%;" src="images/nem.jpg">
+            </div>
+            <div class="col-sm-6">
               <div class="notification-description">
                 <span class="notification">注2</span>
                 InBody測定は、体を構成する基本成分である体水分、タンパク質、ミネラル、体脂肪を定量的に分析し、栄養状態に問題がないか、体がむくんでいないか、身体はバランスよく発達しているかなど、人体成分の過不足を評価する検査です。
                 <br>
                 その中で当院では主に筋肉バランス、身体バランスおよび身体強度に重点をおいてサポートさせていただいております。現状を数値化することで、体の弱い部分あるいは強い部分が明白となり具体的な目標を立てることができます。
               </div>
+            </div>
+            <div class="col-sm-6">
+              <img class="" style="width: 100%;" src="images/inbody.jpg">
+            </div>
+            <div class="col-sm-6">
               <div class="notification-description">
                 <span class="notification">注3</span>
                 仰向けに寝て頂くと首や肩から足先まで全身を計6本のノズルの組合せにより刺激範囲を変化させながら 「もみ」「たたき」「ほぐし」「さすり」「のばし」「おし」の6種類の手技に見立てた水圧刺激をより効果的にそして心地よく体感して頂けるウォーターベッドです。
                 <br>
                 当院では、リラックスし全身の筋肉をほぐし、血行を良くするために使用します
               </div>
+            </div>
+            <div class="col-sm-6">
+              <img class="" style="width: 100%;" src="images/water-bed.jpg">
             </div>
             <div class="col-sm-12">
               <h2 class="main-title">
