--- a/rehabilitation-and-training.html
+++ b/rehabilitation-and-training.html
@@ -82,7 +82,7 @@
                     <div class="page-description">
                       このように近年では、健康維持に筋力がいかに重要か問われる時代となってきました。現在痛みのある方も、無い方も、日常的に運動する習慣を作ってみませんか？
                       <br>
-                      年齢を問わず、全て皆様にとって少しでも健康増進のお役に立てればと考えております。
+                      年齢を問わず、皆様にとって少しでも健康増進のお役に立てればと考えております。
                     </div>
                     <div class="description">
                         <div class="row">
@@ -167,6 +167,15 @@
                                     <li>ダイエットしたい人</li>
                                     <li>軽い負荷をかけて運動したい人</li>
                                 </ul>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <h3 class="item-title">ストレッチスペース</h3>
+                            <p class="col-sm-6">
+                                <img class="" style="width: 100%;" src="images/stretch.jpg">
+                            </p>
+                            <div class="col-sm-6">
+                                <h4 class="content-title">運動の前後のウォームアップにご利用ください。</h4>
                             </div>
                         </div>
                     </div>
