feat: 交通事故に注釈を追加

--- a/traffic-accident.html
+++ b/traffic-accident.html
@@ -87,6 +87,9 @@
                 <p>
                   その後の治療、リハビリはおまかせください。常に患者様にとって、一番最良の方法をご提案いたします。
                 </p>
+                <p>
+                  <span class="emphasis">＊交通事故治療は、予約にて対応いたします。</span>
+                </p>
               </div>
             </div>
           </div>
